--- a/requirements.txt
+++ b/requirements.txt
@@ -1,220 +1,237 @@
-alabaster==0.7.10
-anaconda-client==1.6.5
-anaconda-navigator==1.6.9
-anaconda-project==0.8.0
-asn1crypto==0.22.0
-astroid==1.5.3
-astropy==2.0.2
-Babel==2.5.0
+alabaster==0.7.9
+alembic==0.8.8
+amqp==1.4.9
+anyjson==0.3.3
+apipkg==1.4
+appdirs==1.4.3
+arrow==0.8.0
+autosemver==0.2.4
+Babel==2.3.4
 backports-abc==0.5
-backports.functools-lru-cache==1.4
 backports.shutil-get-terminal-size==1.0.0
 backports.ssl-match-hostname==3.5.0.1
-backports.weakref==1.0rc1
-beautifulsoup4==4.6.0
-bitarray==0.8.1
-bkcharts==0.2
-blaze==0.11.3
-bleach==2.0.0
-bokeh==0.12.10
-boto==2.48.0
-Bottleneck==1.2.1
-cdecimal==2.3
-certifi==2017.11.5
-cffi==1.10.0
-chardet==3.0.4
+beautifulsoup4==4.5.3
+billiard==3.3.0.23
+binaryornot==0.4.0
+bleach==1.5.0
+blinker==1.4
+cached-property==1.3.0
+cairocffi==0.7.2
+CairoSVG==1.0.22
+cchardet==1.1.1
+celery==3.1.25
+certifi==2017.1.23
+cffi==1.9.1
+characteristic==0.1.0
+chardet==2.3.0
+check-manifest==0.34
+citeproc-py==0.3.0
+citeproc-py-styles==0.1.0
 click==6.7
-cloudpickle==0.4.0
-clyent==1.2.2
-colorama==0.3.9
-conda==4.3.29
-conda-build==3.0.27
-conda-verify==2.0.0
+colorama==0.3.7
 configparser==3.5.0
-contextlib2==0.5.5
-cryptography==2.0.3
-cx-Freeze==5.1.1
+cookiecutter==1.4.0
+coverage==4.2
+cryptography==1.5.3
 cycler==0.10.0
-Cython==0.26.1
-cytoolz==0.8.2
-dask==0.15.3
-datashape==0.5.4
-decorator==4.1.2
-distributed==1.19.1
-dj-database-url==0.4.2
-django-appconf==1.0.2
-django-compressor==2.2
-docutils==0.14
-entrypoints==0.2.3
+datacite==0.3.0
+dcxml==0.1.0
+decorator==4.0.10
+dictdiffer==0.6.0
+Django==1.10.5
+docker==2.1.0
+docker-compose==1.11.2
+docker-pycreds==0.2.1
+dockerpty==0.4.1
+docopt==0.6.2
+docutils==0.12
+dojson==1.2.1
+dulwich==0.17.1
+elasticsearch==2.4.1
+elasticsearch-dsl==2.2.0
+entrypoints==0.2.2
 enum34==1.1.6
-et-xmlfile==1.0.1
-fake-useragent==0.1.8
-fastcache==1.0.2
-filelock==2.0.12
-flake8==3.5.0
-Flask==0.12.2
-Flask-Cors==3.0.3
-Flask-WTF==0.14.2
+execnet==1.4.1
+fire==0.1.0
+Flask==0.12.1
+Flask-Admin==1.4.2
+Flask-Alembic==2.0.1
+Flask-Assets==0.12
+Flask-BabelEx==0.9.3
+Flask-Breadcrumbs==0.4.0
+Flask-Cache==0.13.1
+Flask-CeleryExt==0.2.2
+Flask-CLI==0.4.0
+Flask-Collect==1.2.2
+Flask-Cors==3.0.2
+Flask-DebugToolbar==0.10.0
+flask-konch==1.1.0
+Flask-KVSession==0.6.2
+Flask-Limiter==0.9.3
+Flask-Login==0.4.0
+Flask-Mail==0.9.1
+Flask-Menu==0.5.1
+Flask-OAuthlib==0.9.3
+Flask-Principal==0.4.0
+Flask-Security-Fork==1.8.1
+Flask-SQLAlchemy==2.1
+Flask-WTF==0.13.1
+fs==0.5.4
+ftfy==4.3.1
 funcsigs==1.0.2
 functools32==3.2.3.post2
-futures==3.1.1
-gevent==1.2.2
-gitdb==0.6.4
-Github-Cloner==0.1
-GitPython==0.3.6
-glob2==0.5
-gmpy2==2.0.8
-greenlet==0.4.12
-grin==1.2.1
-gunicorn==19.7.1
-h5py==2.7.0
-heapdict==1.0.0
-html5lib==0.999999999
-idna==2.6
-imageio==2.2.0
+future==0.16.0
+github3.py==1.0.0a4
+gunicorn==19.6.0
+html5lib==0.9999999
+httplib2==0.9
+humanize==0.5.1
+idna==2.1
+IDUtils==0.2.3
+ijson==2.3
 imagesize==0.7.1
+infinity==1.4
+intervals==0.8.0
+ipaddr==2.1.11
 ipaddress==1.0.18
-ipykernel==4.6.1
-ipython==5.4.1
-ipython-genutils==0.2.0
-ipywidgets==7.0.0
-isort==4.2.15
+ipdb==0.10.2
+ipykernel==4.5.2
+ipython==5.1.0
+ipython-genutils==0.1.0
+isbnid-fork==0.5.2
+isort==4.2.5
 itsdangerous==0.24
-jdcal==1.3
-jedi==0.10.2
 Jinja2==2.9.6
-jsonschema==2.6.0
-jupyter-client==5.1.0
-jupyter-console==5.2.0
-jupyter-core==4.3.0
-jupyterlab==0.27.0
-jupyterlab-launcher==0.4.0
-lazy-object-proxy==1.3.1
-llvmlite==0.20.0
-locket==0.2.0
-lxml==4.1.0
-Markdown==2.2.0
+jinja2-time==0.2.0
+jsmin==2.2.1
+jsonpatch==1.14
+jsonpointer==1.10
+jsonref==0.1
+jsonresolver==0.2.1
+jsonschema==2.5.1
+jupyter-client==5.0.0
+jupyter-core==4.2.0
+kombu==3.0.37
+konch==2.2.0
+limits==1.2.0
+lockfile==0.8
+lxml==3.6.4
+Mako==1.0.6
 MarkupSafe==1.0
-matplotlib==2.1.0
-mccabe==0.6.1
-mistune==0.7.4
+marshmallow==2.10.4
+matplotlib==2.0.0
+mistune==0.7.3
+mnist==0.2.1
 mock==2.0.0
-mpl-finance==0.10.0
-mpmath==0.19
 msgpack-python==0.4.8
-multipledispatch==0.4.9
-navigator-updater==0.1.0
-nbconvert==5.3.1
-nbformat==4.4.0
-networkx==2.0
-nltk==3.2.4
-nose==1.3.7
-notebook==5.0.0
-numba==0.35.0+10.g143f70e90.dirty
-numexpr==2.6.2
-numpy==1.14.0
-numpydoc==0.7.0
-oauthlib==2.0.6
-odo==0.5.1
-olefile==0.44
-openpyxl==2.4.8
+MySQL-python==1.2.3
+nbconvert==4.2.0
+nbformat==4.1.0
+ndg-httpsclient==0.4.2
+nltk==3.2.2
+node-semver==0.1.1
+notebook==4.4.1
+numpy==1.12.1
+oauthlib==1.1.2
+ordereddict==1.1
 packaging==16.8
-pandas==0.20.3
-pandas-datareader==0.5.0
-pandocfilters==1.4.2
-partd==0.3.8
-path.py==10.3.1
-pathlib==1.0.1
-pathlib2==2.3.0
-patsy==0.4.1
-pbr==3.1.1
+pandas==0.19.2
+passlib==1.6.5
+pathlib2==2.1.0
+pbr==1.10.0
+peewee==2.8.8
 pep8==1.7.0
-pew==1.1.1
 pexpect==4.2.1
 pickleshare==0.7.4
-Pillow==4.2.1
-pipenv==8.3.2
-pkginfo==1.4.1
-ply==3.10
-prompt-toolkit==1.0.15
-protobuf==3.5.1
-psutil==5.4.0
-ptyprocess==0.5.2
-py==1.4.34
-pycairo==1.13.3
-pycodestyle==2.3.1
-pycosat==0.6.2
-pycparser==2.18
+Pillow==3.4.2
+piston-mini-client==0.7.5
+pluggy==0.4.0
+poyo==0.4.0
+prettytensor==0.7.4
+progressbar==2.3
+prompt-toolkit==1.0.9
+protobuf==3.2.0
+psycopg2==2.6.2
+ptyprocess==0.5.1
+py==1.4.31
+pyasn1==0.1.9
+pyasn1-modules==0.0.5
+pycparser==2.17
 pycrypto==2.6.1
-pycurl==7.43.0
-pyflakes==1.6.0
-Pygments==2.2.0
-pylint==1.7.4
-pyodbc==4.0.17
-pyOpenSSL==17.2.0
+pycurl==7.19.5
+pydocstyle==1.1.1
+Pygments==2.1.3
+pymongo==3.4.0
+pyOpenSSL==16.2.0
 pyparsing==2.2.0
-PySocks==1.6.7
-pytest==3.2.1
-python-dateutil==2.6.1
-pytz==2017.2
-PyWavelets==0.5.2
+pyPEG2==2.15.2
+pyserial==2.6
+pytest==3.0.4
+pytest-cache==1.0
+pytest-cov==2.4.0
+pytest-flask==0.10.0
+pytest-pep8==1.0.6
+python-dateutil==2.6.0
+python-editor==1.0.1
+python-slugify==1.2.1
+pytz==2016.7
+pyxdg==0.25
 PyYAML==3.12
-pyzmq==16.0.2
-QtAwesome==0.4.4
-qtconsole==4.3.1
-QtPy==1.3.1
-rcssmin==1.0.6
-requests==2.18.4
-requests-file==1.4.3
-requests-ftp==0.3.1
-requests-oauthlib==0.8.0
-rjsmin==1.0.12
-rope==0.10.5
-ruamel-yaml==0.11.14
-scandir==1.6
-scikit-image==0.13.0
-scikit-learn==0.19.1
-scipy==0.19.1
-seaborn==0.8
-selenium==3.8.0
-shutilwhich==1.1.0
+pyzmq==14.4.1
+raven==5.1.0
+redis==2.10.5
+requests==2.12.1
+requests-oauthlib==0.7.0
+scikit-learn==0.18.1
+scipy==0.19.0
+selenium==2.52.0
+service-identity==1.0.0
+Sickle==0.6.1
 simplegeneric==0.8.1
+simplejson==3.10.0
+simplekv==0.10.0
 singledispatch==3.4.0.3
-six==1.11.0
-smmap==0.9.0
+six==1.10.0
+skflow==0.1.0
+sklearn==0.0
 snowballstemmer==1.2.1
-sortedcollections==0.5.3
-sortedcontainers==1.5.7
-Sphinx==1.6.3
-sphinxcontrib-websupport==1.0.1
-spyder==3.2.4
-SQLAlchemy==1.1.13
-statsmodels==0.8.0
+speaklater==1.3
+Sphinx==1.4.4
+SQLAlchemy==1.1.4
+SQLAlchemy-Continuum==1.2.4
+SQLAlchemy-Utils==0.32.11
+statsd==3.2.1
+stevedore==1.20.0
 subprocess32==3.2.7
-sympy==1.1.1
-tables==3.4.2
-tblib==1.3.2
-tensorflow==1.2.0
+tensorflow==1.0.1
 terminado==0.6
-testpath==0.3.1
-textblob==0.15.1
-toolz==0.8.2
-tornado==4.5.2
-traitlets==4.3.2
-tweepy==3.5.0
-typing==3.6.2
-unicodecsv==0.14.1
-urllib3==1.22
+textblob==0.12.0
+texttable==0.8.7
+tornado==4.4.2
+traitlets==4.3.1
+Unidecode==0.4.19
+uritemplate.py==1.0.1
+uritools==2.0.0
+urllib3==1.20
+uWSGI==2.0.14
+uwsgitop==0.9
+validators==0.11.1
+vine==1.1.3
 virtualenv==15.1.0
 virtualenv-clone==0.2.6
+virtualenvwrapper==4.7.2
 wcwidth==0.1.7
-webencodings==0.5.1
-Werkzeug==0.14.1
-whitenoise==3.3.1
-widgetsnbextension==3.0.2
-wrapt==1.10.11
+webargs==1.4.0
+webassets==0.12.0
+websocket-client==0.40.0
+Werkzeug==0.12.1
+whichcraft==0.4.0
+Workon==0.8.1
+wsgi-statsd==0.3.1
 WTForms==2.1
-xlrd==1.1.0
-XlsxWriter==1.0.2
-xlwt==1.3.0
-zict==0.1.3
+WTForms-Alchemy==0.16.1
+WTForms-Components==0.10.0
+xlrd==1.0.0
+xlutils==2.0.0
+xlwt==1.2.0
+zope.interface==4.1.1
